# codespaces-handson

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  initialize.py  package-lock.json  package.json  pyproject.toml  rest_client.http  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  docker-compose.yml
api/: app.py
database/: data.sql  ddl.sql
docs/: README.md  summary.md
frontend/: main.ts
html/: index.html
public/: index.html
public/css/: main.css
samples/universal/: devcontainer.json
